--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,10 +23,12 @@ dependencies {
 
     implementation ('com.android.support:appcompat-v7:27.1.1') {
         exclude group: 'com.android.support', module:'exifinterface'
+        exclude group: 'com.android.support', module:'animated-vector-drawable'
     }
 
     implementation ('com.android.support:recyclerview-v7:27.1.1') {
         exclude group: 'com.android.support', module:'exifinterface'
+        exclude group: 'com.android.support', module:'animated-vector-drawable'
     }
 
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
@@ -36,6 +38,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation ('com.android.support.test:runner:1.0.2') {
         exclude group: 'com.android.support', module:'exifinterface'
+        exclude group: 'com.android.support', module:'animated-vector-drawable'
     }
 
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
