--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,19 +23,29 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+
+    // Support Library
     implementation ('com.android.support:appcompat-v7:27.1.1') {
         exclude group: 'com.android.support', module:'exifinterface'
         exclude group: 'com.android.support', module:'animated-vector-drawable'
     }
-
+    // Recycler View
     implementation ('com.android.support:recyclerview-v7:27.1.1') {
         exclude group: 'com.android.support', module:'exifinterface'
         exclude group: 'com.android.support', module:'animated-vector-drawable'
     }
-
+    // Constraint Layout
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+
+    // Picaso
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    // Gson
     implementation 'com.google.code.gson:gson:2.8.5'
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation ('com.android.support.test:runner:1.0.2') {
