--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,7 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+# Movie DB API key to be set here. This variable will be used in build.gradle (module)
+# <Variable-name>=<Your-API-Key>
+themoviedb_org_API_KEY="your-api-key-here"
