--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,4 @@ org.gradle.jvmargs=-Xmx1536m
 
 # Movie DB API key to be set here. This variable will be used in build.gradle (module)
 # <Variable-name>=<Your-API-Key>
-themoviedb_org_API_KEY="your-api-key-here"
+themoviedb_org_API_KEY="<your-api-key_here>"
