--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,6 @@ org.gradle.jvmargs=-Xmx1536m
 
 # Movie DB API key to be set here. This variable will be used in build.gradle (module)
 # <Variable-name>=<Your-API-Key>
-themoviedb_org_API_KEY="<your-api-key_here>"
+API_KEY_VARIABLE_NAME="<Your-API-KEY-Here>"
+
+#Other best place is to save in your home directory.
