--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     // Network Helper
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
 
+    // Like Button
+    implementation 'com.github.jd-alexander:LikeButton:0.2.3'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation ('com.android.support.test:runner:1.0.2') {
         exclude group: 'com.android.support', module:'exifinterface'
