--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,10 @@ dependencies {
     // Picaso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
