--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,9 @@ dependencies {
     }
 
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    implementation ('com.android.support:cardview-v7:27.1.1') {
+        exclude group: 'com.android.support', module:'exifinterface'
+        exclude group: 'com.android.support', module:'animated-vector-drawable'
+    }
 }
