--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ dependencies {
 
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    //Card View
     implementation ('com.android.support:cardview-v7:27.1.1') {
         exclude group: 'com.android.support', module:'exifinterface'
         exclude group: 'com.android.support', module:'animated-vector-drawable'
