--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 
 *.iml
 .gradle
+.gradle/
 /local.properties
 /.idea/libraries
 /.idea/modules.xml
@@ -84,3 +85,6 @@ fastlane/test_output
 fastlane/readme.md
 
 gradle.properties
+*.lock
+*.xml
+*.bin
