--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,10 @@ gradle.properties
 *.lock
 *.xml
 *.bin
+.gradle/4.4/fileHashes/fileHashes.bin
+.gradle/4.4/fileHashes/fileHashes.lock
+.gradle/4.4/fileHashes/resourceHashesCache.bin
+.gradle/4.4/taskHistory/taskHistory.bin
+.gradle/4.4/taskHistory/taskHistory.lock
+.gradle/buildOutputCleanup/buildOutputCleanup.lock
+.gradle/buildOutputCleanup/outputFiles.bin
