--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,9 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // Support Design
-    implementation "com.android.support:design:${supportLibVersion}"
-    implementation "com.android.support:appcompat-v7:${supportLibVersion}"
+    implementation 'com.android.support:design:28.0.0-rc01'
+    implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
+    implementation 'com.android.support:support-v4:28.0.0-rc01'
 
     // Constraint Layout
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
@@ -43,8 +44,10 @@ dependencies {
     // Network Helper
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
 
+    // Exo Player
+    implementation "com.google.android.exoplayer:exoplayer-core:${exoPlayerVersion}"
+    implementation "com.google.android.exoplayer:exoplayer-ui:${exoPlayerVersion}"
 
-    implementation 'com.android.support:support-v4:28.0.0-rc01'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
