--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.RecipeDetailsActivity"></activity>
+        <activity android:name=".ui.activity.RecipeDetailsActivity"
+            android:parentActivityName=".ui.activity.MainActivity"/>
+        <activity android:name=".ui.activity.StepActivity"
+            android:parentActivityName=".ui.activity.RecipeDetailsActivity"/>
     </application>
 
 </manifest>
