feature-view swipes, tablayout, fixes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
         <activity android:name=".ui.activity.RecipeDetailsActivity"
             android:parentActivityName=".ui.activity.MainActivity"/>
         <activity android:name=".ui.activity.StepActivity"
-            android:parentActivityName=".ui.activity.RecipeDetailsActivity"/>
+            android:parentActivityName=".ui.activity.RecipeDetailsActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            />
     </application>
 
 </manifest>
