Room Database added with insert and fetch

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-    dataBinding.enabled = true
 }
 
 dependencies {
@@ -38,6 +36,9 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:${retrofitVersion}"
     implementation "com.squareup.retrofit2:converter-gson:${retrofitVersion}"
 
+    // GSON
+    implementation 'com.google.code.gson:gson:2.8.5'
+
     // Stetho Log Interceptor
     implementation 'com.facebook.stetho:stetho:1.5.0'
 
@@ -47,6 +48,16 @@ dependencies {
     // Exo Player
     implementation "com.google.android.exoplayer:exoplayer-core:${exoPlayerVersion}"
     implementation "com.google.android.exoplayer:exoplayer-ui:${exoPlayerVersion}"
+
+    /**
+     * Using ButterKnife to bind views
+     */
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    // Room (Architecute Component)
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
