--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
 }
 
 allprojects {
+
     repositories {
         google()
         jcenter()
@@ -34,4 +35,5 @@ ext {
     supportLibVersion = '28.0.0-rc01'
     retrofitVersion = '2.4.0'
     exoPlayerVersion = '2.8.3'
+    room_version = '1.1.1'
 }
