--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,12 +22,14 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // Support Design
-    implementation 'com.android.support:design:28.0.0-rc01'
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
-    implementation 'com.android.support:support-v4:28.0.0-rc01'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:support-v4:27.1.1'
+
+    implementation 'com.android.support:cardview-v7:27.1.1'
 
     // Constraint Layout
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     // Recycler View
     implementation "com.android.support:recyclerview-v7:${supportLibVersion}"
