--- a/build.gradle
+++ b/build.gradle
@@ -29,10 +29,10 @@ task clean(type: Delete) {
 
 ext {
     minSdkVersion = 21
-    targetSdkVersion = 28
-    compileSdkVersion = 28
+    targetSdkVersion = 27
+    compileSdkVersion = 27
 
-    supportLibVersion = '28.0.0-rc01'
+    supportLibVersion = '27.1.1'
     retrofitVersion = '2.4.0'
     exoPlayerVersion = '2.8.3'
     room_version = '1.1.1'
