--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,26 @@ dependencies {
     //Shared Preferences
     implementation 'com.android.support:preference-v7:27.1.1'
 
+    //------ TESTING
+
+    implementation 'com.android.support:support-annotations:27.1.1'
+    implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.2'
+
     testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
+
+    androidTestImplementation 'com.android.support:support-annotations:27.1.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.2'
+
+    androidTestImplementation('com.android.support.test.espresso:espresso-contrib:2.2') {
+        // Necessary to avoid version conflicts
+        exclude group: 'com.android.support', module: 'appcompat'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude module: 'recyclerview-v7'
+    }
+
+
 }
