--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,7 +69,7 @@ dependencies {
     }
 
     //Ads
-    implementation 'com.google.android.gms:play-services-ads:15.0.1'
+    freeImplementation 'com.google.android.gms:play-services-ads:15.0.1'
 
     implementation 'com.google.api-client:google-api-client:1.23.0'
     implementation 'com.google.http-client:google-http-client-android:1.23.0'
