--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -43,4 +43,5 @@ dependencies {
 
     // Constraint Layout
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation "com.android.support:design:$androidSupportVersion"
 }
